# doable

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  render.yaml
.github/workflows/: release-extension.yml
convex/: releases.ts  runEvents.ts  schema.ts  sessions.ts
convex/_generated/: api.d.ts
deploy/: start.sh
docs/: hermes-setup.md
docs/superpowers/plans/: 2026-07-12-doable-implementation.md  2026-07-12-doable-landing-implementation.md  2026-07-12-full-page-static-editing.md
docs/superpowers/specs/: 2026-07-12-doable-design.md  2026-07-12-doable-landing-design.md  2026-07-12-full-page-static-editing-design.md
extension/: .example.env  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
extension/bash-scripts/: set_global_env.sh
extension/chrome-extension/: manifest.test.ts  manifest.ts  package.json  tsconfig.json
landing/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
landing/src/: App.test.tsx  App.tsx  index.css
server/: .env.example  pyproject.toml
server/app/: __init__.py  convex_client.py  github_app.py  github_client.py  hermes_service.py  ledger.py  main.py  models.py  release_service.py  sessions.py  static_workspace.py  workspace_hermes.py  workspace_preview.py
server/tests/: test_github_client.py  test_health.py  test_sessions.py  test_static_workspace.py  test_workspace_api.py  test_workspace_hermes.py  test_workspace_models.py  test_workspace_preview.py  test_workspace_release.py  test_workspace_sessions.py
(+31 files in other folders)
