[project]
name = "doable-server"
version = "0.1.0"
description = "Hermes-powered server for Doable"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.11,<3",
  "pyjwt[crypto]>=2.10,<3",
  "tinycss2>=1.4,<2",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
